Added tests for Check implementations