@@ -111,6 +111,7 @@
 					<argLine>
 						@{argLine} 
 						--add-opens com.sansey.tictactoe/com.sansey.tictactoe=ALL-UNNAMED
+						--add-opens com.sansey.tictactoe/com.sansey.tictactoe.checks=ALL-UNNAMED
 						--add-opens com.sansey.tictactoe/com.sansey.tictactoe.matrices=ALL-UNNAMED
 					</argLine>
 				</configuration>
